<resources>
    <string name="app_name">TaskManager</string>
    <string name="title_task">Task Manager</string>
    <string name="title_detail_task">Details</string>

    <string name="text_newtitle">New Task</string>
    <string name="text_edititle">Edit Task</string>
    <string name="input_instruction">Input Your Task</string>
    <string name="task_list">your task list</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="done">DONE</string>
    <string name="task_type">Task Category</string>
    <string name="due_date">Due Date</string>

    <string name="desc_detail">Input Details</string>
    <string name="description">Description</string>
    <string name="title_detail">Add title</string>
    <string name="add_title">Title</string>
    <string name="no_task">No task to show</string>
    <string-array name="task_types">
        <item>Phone Call</item>
        <item>Meeting</item>
        <item>Task</item>
        <item>Email</item>
    </string-array>
</resources>
