<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetilActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TaskLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textviewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/add_title"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_in_task"
                android:hint="@string/title_detail"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTitle">

            <TextView
                android:id="@+id/textviewdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/description"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_descr"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_in_task"
                android:hint="@string/desc_detail"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="25"
                android:paddingStart="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_description">

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/task_type"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_in_task"
                android:focusable="false"
                android:inputType="none"
                android:paddingStart="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutCategory">

            <TextView
                android:id="@+id/tv_deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/due_date"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_deadline"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_in_task"
                android:cursorVisible="false"
                android:hint="@string/due_date"
                android:importantForAutofill="no"
                android:inputType="none"
                android:paddingStart="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5"
                tools:ignore="TextFields" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/large_margin"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/ic_finish" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
